VLC4: interactive video plugins aren't interactive

Reproducible on Windows 10, with the following VLC4 builds:

For some reason puzzle, magnify and freeze interactive video filters can't be interacted with. For example, I keep clicking and dragging my mouse around with just freeze plugin enabled and the plugin doesn't do anything. Or I enable just puzzle plugin, see that the video is divided into puzzle pieces now, but can't move them at all.

Not reproducible using VLC3, everything works just fine in VLC3.

Edited by nurupo