filters: fix filter mouse callback is never called

ChainMouse handler was never called and original callback was overwritten.
we now run the filter_chain_MouseFilter on the chain unconditionally

fix: #27557